# nice-shot

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  main.py  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  lint.yml
configs/: config_example.yaml  config_mastu.yml  config_uda.yaml
docs/: configuration.md  data-formats.md  index.md  quickstart.md
nice_shot/: app.py  backends.py  config.yaml  config_schema.py  nlp.py
nice_shot/assets/: custom.css
site/: 404.html  index.html  search.json
site/configuration/: index.html
site/data-formats/: index.html
site/quickstart/: index.html
