[project]
name = "nice-shot"
version = "0.1.0"
description = "Interactive tokamak shot dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=4.1.0",
    "duckdb>=1.5.3",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "umap-learn>=0.5.12",
]

[project.scripts]
nice-shot = "nice_shot.app:main"

[project.optional-dependencies]
shap = [
    "matplotlib>=3.10.9",
    "shap>=0.49.1",
    "xarray>=2026.4.0",
]

[dependency-groups]
dev = [
    "zensical>=0.0.43",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["nice_shot*"]
