[project]
name = "nice-shot"
version = "1.0.0"
description = "Interactive tokamak shot dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=4.1.0",
    "duckdb>=1.5.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "shap>=0.49.1",
    "umap-learn>=0.5.12",
    "xarray>=2026.4.0",
]

[project.scripts]
nice-shot = "nice_shot.app:main"

[project.optional-dependencies]
shap = [
    "matplotlib>=3.10.9",
    "shap>=0.49.1",
    "xarray>=2026.4.0",
]

[dependency-groups]
dev = [
    "bump-my-version>=0.32.0",
    "ruff>=0.11.0",
    "ty>=0.0.1a14",
    "zensical>=0.0.43",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["nice_shot*"]

[tool.bumpversion]
current_version = "1.0.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty.environment]
python-version = "3.12"
extra-paths = ["nice_shot"]
